--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js">
   <link rel="stylesheet" href="style.css">
   <title>Twittler</title>
 </head>
 <body>
-  <header></header>
-  <section></section>
-  <footer></footer>
+  <h1 id="title">Twittler</h1>
+  <div id="wrap">
+    <header class="header">
+      <form>
+        <input type="text" placeholder="name" value="Sohee">
+        <input type="text" placeholder="message" value="Nothing is happened...isn't it?">
+        <input type="button" value="TWEET" class="iButton1">
+        <input type="button" value="REFRESH" class="iButton2">
+      </form>
+    </header>
+    <section class="section">
+      <div class="box-container"></div>
+    </section>
+  </div>
+  <footer>
+    <p>copyright</p>
+  </footer>
 </body>
 </html>
