--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       </form>
     </header>
     <section class="section">
-      <div class="box-container"></div>
+      <div class="box-container">
+        <!-- 박스 추가 영역 -->
+        <div class="null-box"></div>
+      </div>
     </section>
   </div>
   <footer>
